--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -29,6 +29,7 @@ jobs:
 
   release:
     needs: build
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: code checkout
