--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -49,4 +49,4 @@ jobs:
       - name: semantic-release execution
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: semantic-release
+        run: npx semantic-release
