--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -42,11 +42,9 @@ jobs:
       
       - name: semantic-release install
         run: npm install --save-dev semantic-release @semantic-release/changelog @semantic-release/git @semantic-release/github @semantic-release/commit-analyzer @semantic-release/release-notes-generator
-    
-      - name: Instalar dependências
-        run: npm ci
 
       - name: semantic-release execution
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEBUG: semantic-release:*
         run: npx semantic-release
