--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -65,4 +65,4 @@ jobs:
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEBUG: semantic-release:*
-        run: npx semantic-release
+        run: npx -p @semantic-release/commit-analyzer echo "Module is installed"
