--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -67,6 +67,6 @@ jobs:
 
       - name: semantic-release execution
         env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           DEBUG: semantic-release:*
         run: npx semantic-release
