--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -68,5 +68,4 @@ jobs:
       - name: semantic-release execution
         env: 
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          DEBUG: semantic-release:*
-        run: npx semantic-release
+        run: echo ${{ secrets.GH_TOKEN }} && npx semantic-release
