--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -67,5 +67,5 @@ jobs:
 
       - name: semantic-release execution
         env: 
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: echo ${{ secrets.GH_TOKEN }} && npx semantic-release
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: echo ${{ secrets.GITHUB_TOKEN }} && npx semantic-release
